some changes in animation

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div id="smooth-wrapper"> <!-- required for ScrollSmoother -->
       <div id="smooth-content">
         <div id="main" class="w-full">
-          <img src="./images/brown.png" alt="" srcset="" id="headphone">
+          <img src="./images/Balance-image-removebg-preview.png" alt="" srcset="" id="headphone">
 
           <div id="section1">
-            <h1 class="heading">Modern Harmony</h1>
+            <h1 class="heading">Law at Your Fingertips</h1>
           </div>
 
           <div id="section2">
