i have attached logo, add blur effect behind the nav bar ,  change all text except the very last para, change all the images except the top laws , please accept...  many more to come

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Audira</title>
+    <title>LEXEYE</title>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,18 +15,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
     <header class="w-full">
       <nav>
-        <img src="./images/logo.png" alt="" class="logo">
-        <a href="#" class="btn radius">Buy Now</a>
+        <img src="./images/Correct-Logo.png" alt="" class="logo" />
+        <a href="#" class="btn radius">Get Started</a>
       </nav>
     </header>
 
-    <div id="smooth-wrapper"> <!-- required for ScrollSmoother -->
+    <div id="smooth-wrapper">
+      <!-- required for ScrollSmoother -->
       <div id="smooth-content">
         <div id="main" class="w-full">
-          <img src="./images/Balance-image-removebg-preview.png" alt="" srcset="" id="headphone">
+          <img
+            src="./images/Balance-image-removebg-preview.png"
+            alt=""
+            srcset=""
+            id="headphone"
+          />
 
           <div id="section1">
             <h1 class="heading">Law at Your Fingertips</h1>
@@ -34,94 +39,117 @@
 
           <div id="section2">
             <div class="content-wrapper">
-              <h2 class="heading">True Carity</h2>
-              <p>Engineered for clarity, comfort, and immersive sound — Audira
-                redefines your listening experience with style and performance
-                in perfect harmony.</p>
-                <a href="" class="btn radius">Buy Now</a>
+              <h2 class="heading">Balance Forge</h2>
+              <p>
+                Crafted for clarity, balance, and vision — the Clarity Engine is
+                where technology meets justice, turning complexity into
+                confidence and insight into action.
+              </p>
+              <a href="" class="btn radius">Unfold</a>
             </div>
             <div class="feature-wrapper">
               <div class="feature-box radius">
-                <div class="feature-name">Crystal-Clear Audio</div>
+                <div class="feature-name">Crystal-Clear Clarity</div>
                 <div class="feature-detail">
-                  Hear every detail with balanced bass and studio-quality mids
-                  and highs.
+                  Every statute simplified and explained for better
+                  understanding.
                 </div>
               </div>
               <div class="feature-box radius">
-                <div class="feature-name">All-Day Comfort</div>
+                <div class="feature-name">Anytime, Anywhere Access</div>
                 <div class="feature-detail">
-                  Lightweight build with plush ear cushions and ergonomic fit.
+                  Your complete legal library, wherever you are.
                 </div>
               </div>
               <div class="feature-box radius">
-                <div class="feature-name">40+ Hour Battery Life</div>
+                <div class="feature-name">40+ Laws Accessible</div>
                 <div class="feature-detail">
-                  Long-lasting performance, wherever you go.
+                  From constitutional texts to local acts, all in one place.
                 </div>
               </div>
             </div>
           </div>
 
           <div id="section3">
-            <h2 class="heading">Masterbeat</h2>
+            <h2 class="heading">LexSource</h2>
             <div class="content-wrapper">
-              <video width="500"
+              <video
+                width="500"
                 height="auto"
-                autoplay loop muted class="radius">
-                <source src="./images/video.mp4" type="video/mp4" />
+                autoplay
+                loop
+                muted
+                class="radius"
+              >
+                <source src="./images/video-2.mp4" type="video/mp4" />
               </video>
               <div class="content">
-                 <p>
-                  Crafted for the modern audiophile, Audira headphones deliver
-                  sound so rich, it pulses through your senses. From crisp highs
-                  to deep, rolling bass—you don’t just hear it, you feel it.
+                <p>
+                  Crafted for the modern legal mind, LexEye delivers access to
+                  laws with clarity and precision. From constitutional rights to
+                  everyday regulations, you don’t just read the law, you
+                  understand it.
                 </p>
                 <p>
-                  Whether you're in focus mode or free flow, the precision-tuned
-                  audio adapts to your pace. With Masterbeat, music becomes your
-                  personal soundtrack—bold, immersive, unforgettable.
+                  Whether you’re preparing for court or seeking quick legal
+                  guidance, the platform adapts to your needs. With LexEye, the
+                  law becomes accessible—reliable, comprehensive, and
+                  empowering.
                 </p>
               </div>
             </div>
           </div>
 
           <div id="section4">
-            <img src="./images/img1.jpeg" alt="" srcset="" class="img1 radius">
-            <img src="./images/img2.jpeg" alt="" srcset="" class="img2 radius">
-            <img src="./images/img3.jpeg" alt="" srcset="" class="img3 radius">
+            <img
+              src="./images/Protest.jpg"
+              alt=""
+              srcset=""
+              class="img1 radius"
+            />
+            <img
+              src="./images/Traffic-Police.jpg"
+              alt=""
+              srcset=""
+              class="img2 radius"
+            />
+            <img
+              src="./images/Crime.jpg"
+              alt=""
+              srcset=""
+              class="img3 radius"
+            />
           </div>
 
           <div id="section5">
-            <h2 class="heading">Top Picks</h2>
+            <h2 class="heading">Top Laws</h2>
             <div class="product-section">
               <div class="product">
-                <img src="./images/green.png" alt="">
-                <div class="name">Audira One</div>
-                <div class="price">₹4,499</div>
+                <img src="./images/green.png" alt="" />
+                <div class="name">The Constitution of Pakistan, 1973</div>
+                <!-- <div class="price">₹4,499</div> -->
               </div>
               <div class="product">
-                <div class="name">Audira Plus</div>
-                <div class="price">₹7,499</div>
+                <div class="name">Pakistan Penal Code, 1860</div>
+                <!-- <div class="price">₹7,499</div> -->
               </div>
               <div class="product">
-                <img src="./images/black.png" alt="">
-                <div class="name">Audira Max Pro</div>
-                <div class="price">₹11,499</div>
+                <img src="./images/black.png" alt="" />
+                <div class="name">Code of Criminal Procedure, 1898</div>
+                <!-- <div class="price">₹11,499</div> -->
               </div>
             </div>
           </div>
-
         </div>
 
         <div id="section6" class="w-full">
-          <img src="./images/img4.jpg" class="radius" alt="" srcset="">
+          <img src="./images/img4.jpg" class="radius" alt="" srcset="" />
           <div class="content-wrapper">
             <h2 class="heading">Pure Escape</h2>
-             <p>
-              Step into a world where every note feels alive. Audira
-              headphones are engineered to create a sound experience that
-              surrounds you—deep, rich, and breathtaking.
+            <p>
+              Step into a world where every note feels alive. Audira headphones
+              are engineered to create a sound experience that surrounds
+              you—deep, rich, and breathtaking.
             </p>
             <p>
               Whether you're working, relaxing, or moving, our design blends
@@ -129,17 +157,15 @@
               you feel the moment.
             </p>
           </div>
-
         </div>
 
         <footer class="w-full">
-            <img src="./images/logo.png" class="logo" alt="">
-            <div class="social">
-              <a href=""><img src="./images/fb.png" alt=""></a>
-              <a href=""><img src="./images/insta.png" alt=""></a>
-            </div>
+          <img src="./images/logo.png" class="logo" alt="" />
+          <div class="social">
+            <a href=""><img src="./images/fb.png" alt="" /></a>
+            <a href=""><img src="./images/insta.png" alt="" /></a>
+          </div>
         </footer>
-
       </div>
     </div>
 
