--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="w-full">
       <nav>
         <img src="./images/Correct-Logo.png" alt="" class="logo" />
-        <a href="#" class="btn radius">Get Started</a>
+        <a href="login.html" class="btn radius">Get Started</a>
       </nav>
     </header>
 
