made a sign in sign up page with random password generator

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <body>
     <header class="w-full">
       <nav>
-        <img src="./images/Correct-Logo.png" alt="" class="logo" />
+        <a href="index.html">
+          <img src="./images/Correct-Logo.png" alt="Logo" class="logo" />
+        </a>
+
         <a href="login.html" class="btn radius">Get Started</a>
       </nav>
     </header>
