--- a/index.html
+++ b/index.html
@@ -125,16 +125,17 @@
             <h2 class="heading">Top Laws</h2>
             <div class="product-section">
               <div class="product">
-                <img src="./images/green.png" alt="" />
+                <img src="./images/Protest.jpg" alt="" />
                 <div class="name">The Constitution of Pakistan, 1973</div>
                 <!-- <div class="price">₹4,499</div> -->
               </div>
               <div class="product">
+                <img src="./images/Traffic-Police.jpg" alt="" />
                 <div class="name">Pakistan Penal Code, 1860</div>
                 <!-- <div class="price">₹7,499</div> -->
               </div>
               <div class="product">
-                <img src="./images/black.png" alt="" />
+                <img src="./images/Crime.jpg" alt="" />
                 <div class="name">Code of Criminal Procedure, 1898</div>
                 <!-- <div class="price">₹11,499</div> -->
               </div>
