--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
         </div>
 
         <footer class="w-full">
-          <img src="./images/logo.png" class="logo" alt="" />
+          <a href="index.html">
+            <img src="./images/Correct-Logo.png" alt="Logo" class="logo" />
+          </a>
           <div class="social">
             <a href=""><img src="./images/fb.png" alt="" /></a>
             <a href=""><img src="./images/insta.png" alt="" /></a>
