add hover effect in section 5

--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
             <div class="product-section">
               <div class="product">
                 <img src="./images/Protest.jpg" alt="" />
-                <div class="name">The Constitution of Pakistan, 1973</div>
+                <div class="name"><h4>The Constitution of Pakistan, 1973</h4></div>
                 <!-- <div class="price">₹4,499</div> -->
               </div>
               <div class="product">
                 <img src="./images/Traffic-Police.jpg" alt="" />
-                <div class="name">Pakistan Penal Code, 1860</div>
+                <div class="name"><h4>Pakistan Penal Code, 1860</h4></div>
                 <!-- <div class="price">₹7,499</div> -->
               </div>
               <div class="product">
                 <img src="./images/Crime.jpg" alt="" />
-                <div class="name">Code of Criminal Procedure, 1898</div>
+                <div class="name"><h4>Code of Criminal Procedure, 1898</h4></div>
                 <!-- <div class="price">₹11,499</div> -->
               </div>
             </div>
